--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
     <string name="app_name">ToDoList</string>
+    <string name="login">Login</string>
+    <string name="username">Username</string>
+    <string name="usernameHint">Enter Your Username</string>
+    <string name="password">Password</string>
+    <string name="passwordHint">********</string>
+    <string name="loginText1">Don\'t have an account?</string>
+    <string name="register">Register</string>
 </resources>
