--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,10 @@
     <string name="description">Description</string>
     <string name="add_task">Add Task</string>
     <string name="next_button">next button</string>
+    <string name="task_time">Task Time :</string>
+    <string name="task_priority">Task Priority</string>
+    <string name="task_category">Task Category</string>
+    <string name="delete_task">Delete Task</string>
+    <string name="edit_task">Edit Task</string>
+    <string name="back_button">back button</string>
 </resources>
