--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,4 +44,5 @@
     <string name="health">Health</string>
     <string name="movie">Movie</string>
     <string name="add_category">Add Category</string>
+    <string name="logout_button">logout button</string>
 </resources>
